[package]
name = "twoRatchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.97", default-features = false, features = ["derive", "alloc"] }
serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.1", default-features = false, features = ["alloc"] }



rand = "*"
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.8.0"
generic-array = "0.14.5"
sha2 = { version = "0.8.0", default-features = false }
ccm = "0.4.4"
aes = "0.7.5"

x25519-dalek-ng = { version = "1.1.1", default-features = false, features = ["u32_backend"] }


